feat: :sparkles: 首页

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html>
-<head></head>
-<body></body>
+<html lang="zh">
+  <head>
+    <meta charset="utf-8" />
+    <link data-trunk rel="tailwind-css" href="/styles/output.css" />
+    <title>Bing Images</title>
+  </head>
+  <body></body>
 </html>
